tests/NormalTests/paczka1/fuzzy1/38151326.err
Error in line 2: lMig0 S334 9,8
Error in line 23: FhGb1K9VQjn S302 317,27
Error in line 12: S419 S419 98,0
Error in line 24: s4mRL0OPT S537 4,6
Error in line 36: pm6T75vaM S334 95,3
